--- a/library.properties
+++ b/library.properties
@@ -7,4 +7,4 @@ paragraph=It read value (state of button, stick and trigger) and write report (v
 category=Communication
 url=https://github.com/asukiaaa/arduino-XboxSeriesXControllerESP32
 architectures=*
-depends=XboxControllerNotificationParser,NimBLE-Arduino,XboxSeriesXHIDReportBuilder_asukiaaa
+depends=XboxControllerNotificationParser,XboxSeriesXHIDReportBuilder_asukiaaa
